--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==1.1.2
-Flask-WTF==0.14.3
-pytest==6.1.2
+celery==4.4.7
+Flask==2.0.2
+Flask-WTF==1.0.0
+flower==0.9.7
+pytest==7.0.0
+redis==4.1.3
